fix carousel arrow off the screen on mobile

--- a/blocks/pet-details/pet-details.css
+++ b/blocks/pet-details/pet-details.css
@@ -204,6 +204,9 @@
   border-radius: 50%;
   padding: 0;
   margin: 0 5px;
+  @media screen and (max-width: 461px) {
+    margin: 0 4px;
+  }
 }
 .pet-details .carousel-section .image-carousel-navigator[aria-disabled='true'] {
   background: var(--color-purple);
